--- a/src/index.html
+++ b/src/index.html
@@ -29,8 +29,8 @@
 
       .overlay-content {
         position: absolute;
-        top: 0;
-        left: 0;
+        top: 10px;
+        left: 10px;
         width: 100vw;
         height: 100vh;
         z-index: 2; 
@@ -43,6 +43,25 @@
 
       .hidden {
         display: none;
+      }
+      
+      .config-content {
+        /* vertical*/
+        position: absolute;
+        top: 60px;
+        left: 0px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: left;
+        background-color: rgba(255, 255, 255, 0.5);
+      }
+
+      .config-item {
+        display: flex;
+        align-items: center;
+        margin-left: 5px;
+        margin-right: 5px;
       }
 
     </style>
